# GPSdenied

./: .gitignore  BORDER_CHANGES.md  CODEX_HANDOFF.md  PROJECT_REPORT.md  README.md  Simulation-Based Development.md.txt  setup.sh  terrain_analysis_results.json
.github/workflows/: ci.yml
config/: system_params.yaml
data/: terrain_db_meta.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: 01_mission_framing.md  02_mvp_architecture.md  03_subsystem_workflow.md  04_development_roadmap.md
missions/: border_patrol.yaml  warehouse_inspection.yaml
scripts/: analyze_terrain_features.py  build_terrain_db.py  launch_sim.sh  run_border_demo.py  run_demo.py  run_integration_tests.py  test_safety.py  verify_sim.sh
src/gps_denied_bringup/: package.xml  setup.cfg  setup.py
src/gps_denied_bringup/gps_denied_bringup/: __init__.py  telemetry_aggregator.py
src/gps_denied_bringup/launch/: autonomous_mission.launch.py  full_system.launch.py  test_state_estimation.launch.py
src/gps_denied_control/: package.xml  setup.cfg  setup.py
src/gps_denied_control/gps_denied_control/: __init__.py  px4_commander.py  trajectory_tracker.py
src/gps_denied_interfaces/: CMakeLists.txt  package.xml
src/gps_denied_interfaces/action/: ExecuteMission.action  NavigateToWaypoint.action
src/gps_denied_interfaces/msg/: FailsafeCommand.msg  NavigationState.msg  ObstacleMap.msg  SubsystemHealth.msg  SystemStatus.msg  Waypoint.msg  WaypointList.msg
src/gps_denied_interfaces/srv/: EmergencyStop.srv  GetSystemHealth.srv  SetMission.srv
src/gps_denied_mapping/: package.xml  setup.cfg  setup.py
src/gps_denied_mapping/gps_denied_mapping/: __init__.py  map_manager.py  octomap_builder.py
src/gps_denied_perception/: package.xml  setup.cfg  setup.py
src/gps_denied_perception/gps_denied_perception/: __init__.py  depth_processor.py  feature_extractor.py  obstacle_detector.py  surveillance_manager.py
src/gps_denied_planning/: package.xml  setup.cfg  setup.py
src/gps_denied_planning/gps_denied_planning/: __init__.py  local_planner.py  waypoint_manager.py
src/gps_denied_safety/: package.xml  setup.cfg  setup.py
src/gps_denied_safety/gps_denied_safety/: __init__.py  mission_supervisor.py  safety_monitor.py
src/gps_denied_sim/: CMakeLists.txt  package.xml
src/gps_denied_sim/worlds/: warehouse.sdf
src/gps_denied_state_estimation/: package.xml  setup.cfg  setup.py
src/gps_denied_state_estimation/gps_denied_state_estimation/: __init__.py  ground_truth_comparator.py  px4_vision_bridge.py  terrain_matcher.py  vio_node.py
