<?xml version="1.0"?>
<package format="3">
  <name>gps_denied_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, system config, and telemetry nodes for the GPS-denied navigation stack.</description>
  <maintainer email="dev@gpsdenied.dev">GPS Denied Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gps_denied_interfaces</depend>
  <depend>gps_denied_perception</depend>
  <depend>gps_denied_state_estimation</depend>
  <depend>gps_denied_mapping</depend>
  <depend>gps_denied_planning</depend>
  <depend>gps_denied_control</depend>
  <depend>gps_denied_safety</depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
