<?xml version="1.0"?>
<package format="3">
  <name>gps_denied_perception</name>
  <version>0.1.0</version>
  <description>Camera drivers, feature extraction, depth processing, and point cloud generation.</description>
  <maintainer email="dev@gpsdenied.dev">GPS Denied Dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>gps_denied_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
