<?xml version="1.0"?>
<package format="3">
  <name>gps_denied_planning</name>
  <version>0.1.0</version>
  <description>Waypoint manager and local path planner (RRT* + minimum-snap).</description>
  <maintainer email="dev@gpsdenied.dev">GPS Denied Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>gps_denied_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
