<?xml version="1.0"?>
<package format="3">
  <name>gps_denied_safety</name>
  <version>0.1.0</version>
  <description>Mission supervisor, fail-safe state machine, and safety monitor.</description>
  <maintainer email="dev@gpsdenied.dev">GPS Denied Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>gps_denied_interfaces</depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
