<?xml version="1.0"?>
<package format="3">
  <name>gps_denied_sim</name>
  <version>0.1.0</version>
  <description>Gazebo simulation worlds, drone models, and SITL configuration.</description>
  <maintainer email="dev@gpsdenied.dev">GPS Denied Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
